[package]
name = "netlify_toml"
version = "0.3.3"
authors = [
  "David Calavera <david@netlify.com>",
  "George Hahn <george.hahn@netlify.com>",
  "Marcus Weiner <marcus@netlify.com>",
  "Moritz Gunz <moritz.gunz@netlify.com>"
]
license = "MIT"
readme = "README.md"
description = "netlify_toml is a parser for netlify.toml files"
homepage = "https://github.com/calavera/netlify-toml-rs"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
